Isabelle NEWS -- history of user-relevant changes
=================================================

(Note: Isabelle/jEdit shows a tree-view of the NEWS file in Sidekick.)


New in this Isabelle version
----------------------------

*** HOL ***

* SMT:
  - Added option "cvc5_integer_induction" and
    "cvc5_structural_induction".



New in Isabelle2025-1 (December 2025)
-------------------------------------

*** General ***

* A Prover IDE session, e.g. in Isabelle/jEdit or Isabelle/VSCode, is
now able to load markup and messages from the underlying session
database. Example: "isabelle jedit -l HOL src/HOL/Nat.thy" for theory
"HOL.Nat" in session "HOL". This information is read-only: editing
theory sources in the editor will invalidate formal markup, and replace
it by an error message. Output messages depend on system options
"show_results" (default true) and "show_states" (default false),
provided at build-time for the underlying session database.

* Declarations of intro/elim/dest rules for Pure and the Classical
Reasoner (e.g. HOL) are handled more uniformly and efficiently: the
order of rule declarations is maintained accurately, regardless of
intermediate [rule del] declarations. Furthermore, [dest] is now a
proper declaration on its own account, instead of the former expansion
[elim_format, elim]. Consequently, [rule del] no longer deletes the
[elim_format] of the given rule, only the original rule. Very rare
INCOMPATIBILITY: tools like "blast" and "auto" may fail in unusual
situations.

* Isar proof results --- notably from finished 'have' or 'show' --- are
printed as regular "writeln" message instead of "state": this follows
toplevel results from Isabelle2023. The order of output messages has
been fine-tuned accordingly, to show results as "urgent" message before
state output (if enabled). This affects Isabelle/jEdit panels for Output
vs. State in particular.

* For pretty-printed output a margin <= 0 means there is no margin to be